tests/ui/enum_derive/ty_impls.stderr
error: `enum_derive(Transpose)` all fields need to be generics
  --> tests/ui/enum_derive/ty_impls.rs:8:1
   |
8  | / enum Enum1<A, B> {
9  | |     //~^ ERROR `enum_derive(Transpose)` all fields need to be generics
10 | |     A(Foo<A>),
11 | |     B(B),
12 | | }
   | |_^
